--- a/nuxt-contentful-blog/package.json
+++ b/nuxt-contentful-blog/package.json
@@ -11,13 +11,19 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
     "nuxt": "^2.0.0",
+    "nuxt-fontawesome": "^0.4.0",
     "nuxt-webfontloader": "^1.1.0",
     "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.2.0"
