--- a/nuxt-contentful-blog/package.json
+++ b/nuxt-contentful-blog/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@nuxtjs/markdownit": "^1.2.6",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
+    "markdown-it-toc": "^1.1.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-webfontloader": "^1.1.0",
