--- a/nuxt-contentful-blog/package.json
+++ b/nuxt-contentful-blog/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/markdownit": "^1.2.6",
     "contentful": "^7.9.1",
     "dotenv": "^8.0.0",
+    "firebase": "^6.6.2",
     "markdown-it-toc": "^1.1.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
